--- a/index.html
+++ b/index.html
@@ -7,18 +7,28 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <section class="home">
+    <section class="home" id="home">
         <nav>
             <div class="nav-width">
                 <div class="logo">BTI</div>
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a href="#home">Home</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="">Team</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
             </div>
         </nav>
+
+        <div class="hero-section container">
+            <h1>TEAM BRAND NAME</h1>
+            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ex accusantium obcaecati, sunt quidem fuga. Culpa vel non iusto molestiae accusamus quos tempora harum porro?</h3>
+            <a href=""><button class="btn">Let's Talk</button></a>
+        </div>
+    </section>
+
+    <section class="about" id="about">
+
     </section>
 </body>
 </html>
