Briefly added the about section

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <section class="home" id="home">
         <nav>
-            <div class="nav-width">
+            <div class="container flex">
                 <div class="logo">BTI</div>
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="">About</a></li>
+                    <li><a href="#about">About</a></li>
                     <li><a href="">Team</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
@@ -21,14 +21,28 @@
         </nav>
 
         <div class="hero-section container">
-            <h1>TEAM BRAND NAME</h1>
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ex accusantium obcaecati, sunt quidem fuga. Culpa vel non iusto molestiae accusamus quos tempora harum porro?</h3>
+            <h1>TEAM <span>BRAND</span> NAME</h1>
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ex accusantium obcaecati, sunt quidem fuga. Culpa vel non iusto molestiae accusamus quos tempora harum porro?</h2>
             <a href=""><button class="btn">Let's Talk</button></a>
         </div>
     </section>
 
     <section class="about" id="about">
+        <div class="container">
+            <h1>ABOUT <span>US</span></h1>
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolorum deleniti aut itaque maxime quo molestiae excepturi dolores quod quisquam minus suscipit libero, cum aliquid ipsam? Ipsam officia eveniet commodi.</h2>
 
+            <div class="flex">
+                <div class="about-img"><img src="anonymous-code-computer.jpg" alt=""></div>
+                <div class="about-text">
+                    <h2><span>Our Mission</span></h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab unde totam ipsam maiores minus eveniet velit quaerat minima? Cum rem amet, temporibus sit inventore eveniet natus voluptas quia a assumenda suscipit atque quo impedit? Fugiat animi magnam adipisci provident nemo.</p>
+                    <h2><span>Our Vission</span></h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab unde totam ipsam maiores minus eveniet velit quaerat minima? Cum rem amet, temporibus sit inventore eveniet natus voluptas quia a assumenda suscipit atque quo impedit? Fugiat animi magnam adipisci provident nemo.</p>
+                    <a href=""><button class="btn">Learn More</button></a>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
