--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="">Team</a></li>
+                    <li><a href="#team">Team</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
             </div>
@@ -40,6 +40,23 @@
                     <h2><span>Our Vission</span></h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab unde totam ipsam maiores minus eveniet velit quaerat minima? Cum rem amet, temporibus sit inventore eveniet natus voluptas quia a assumenda suscipit atque quo impedit? Fugiat animi magnam adipisci provident nemo.</p>
                     <a href=""><button class="btn">Learn More</button></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="team" id="team">
+        <div class="container">
+            <h1>MEET OUR TEAM MEMBERS</h1>
+            <div class="team-cols">
+                <div class="team-card">
+                    <div class="team-card-img"><img src="man-alone.jpg" alt="" width="100%" height="150px"></div>
+                    <h3><span>Joe Doe</span></h3>
+                    <p>Software Engineer</p>
+                    <p>Digital Marketter</p>
+                    <p>Designer</p>
+
                 </div>
             </div>
         </div>
